# fdc_bitstream

./: CMakeLists.txt  LICENSE.md  README.md  convert_test.py
.github/: Doxyfile
.github/workflows/: doxygen-gh-pages.yml  main.yml
Docker/: Dockerfile
check_image/: CMakeLists.txt  README.md  check_image.cpp
check_mfm_image/: CMakeLists.txt  check_mfm_image.cpp
create_mfm_image/: CMakeLists.txt  README.md  create_mfm_image.cpp
disk_analyzer/: CMakeLists.txt  README.md  analyzer.cpp  esc_seq.cpp  esc_seq.h  hw_abst.cpp  hw_abst.h
disk_image/: CMakeLists.txt  README.md  byte_array.h  d77img.cpp  d77img.h  dll_export.h  image_base.cpp  image_d77.cpp  image_fdx.cpp  image_hfe.cpp  image_mfm.cpp  image_raw.cpp  image_rdd.cpp
docs/html/: _l_i_c_e_n_s_e_8md.html  _r_e_a_d_m_e_8md.html  analyzer_8cpp.html  analyzer_8cpp.js  analyzer_8cpp_source.html  annotated.html  annotated_dup.js  bit__array_8cpp.html  bit__array_8cpp.js  bit__array_8cpp_source.html  bit__array_8h.html  bit__array_8h.js  bit__array_8h_source.html  byte__array_8h.html  byte__array_8h.js  byte__array_8h_source.html  check__image_2_r_e_a_d_m_e_8md.html  check__image_8cpp.html  check__image_8cpp.js  check__image_8cpp_source.html  check__mfm__image_8cpp.html  check__mfm__image_8cpp.js  check__mfm__image_8cpp_source.html  classbit__array-members.html  classbit__array.html  classbit__array.js  classbyte__array-members.html  classbyte__array.html  classbyte__array.js  classd77img-members.html  classd77img.html  classd77img.js  classd77img_1_1sector__data-members.html  classd77img_1_1sector__data.html  classd77img_1_1sector__data.js  classdisk__image-members.html  classdisk__image.html  classdisk__image.js  classdisk__image__base__properties-members.html  classdisk__image__base__properties.html  (+385 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+65 more)
fdc_bitstream/: CMakeLists.txt  README.md  bit_array.cpp  fdc_bitstream.cpp  fdc_crc.cpp  fdc_misc.cpp  fdc_vfo.cpp  fdc_vfo_base.cpp  image_base.cpp  image_hfe.cpp  image_mfm.cpp  image_raw.cpp  mfm_codec.cpp  vfo_experimental.cpp  vfo_fixed.cpp  vfo_pid.cpp  vfo_pid2.cpp  vfo_pid3.cpp  vfo_simple.cpp  vfo_simple2.cpp
fdc_common/: CMakeLists.txt  README.md  bit_array.cpp
fdc_test/: CMakeLists.txt  README.md  common.cpp  common.h  fdc_test.cpp
hfe2mfm/: CMakeLists.txt  hfe2mfm.cpp  image_mfm.h
image_converter/: CMakeLists.txt  README.md  byte_array.h  d77img.cpp  d77img.h  image_converter.cpp
include/: bit_array.h  common.h  disk_images.h  dll_export.h  fdc_bitstream.h  fdc_crc.h  fdc_defs.h  fdc_misc.h  fdc_vfo.h  fdc_vfo_base.h  fdc_vfo_def.h  image_base.h  image_d77.h  image_fdx.h  image_hfe.h  image_mfm.h  image_raw.h  image_rdd.h  mfm_codec.h  vfo_experimental.h  vfo_fixed.h  vfo_pid.h  vfo_pid2.h  vfo_pid3.h  vfo_simple.h  vfo_simple2.h
kfx2mfm/: README.md  kfx2mfm.py
pauline2raw/: CMakeLists.txt  main.cpp  pauline2raw.cpp  pauline2raw.h
test_code/: crctest.cpp  crctest.py
test_data/: 2019FM77AVDemo-4MHz.raw  2019FM77AVDemo-8MHz.raw  2019FM77AVDemo.d77
tests/: CMakeLists.txt  compare.cpp  format.cpp  raw2d77.cpp  util.cpp  util.h
vfo_optimizer/: CMakeLists.txt  vfo_optimizer.cpp
